--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "draft-js": "^0.10.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.1",
+    "react-tooltip": "^3.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
